compiler/testData/diagnostics/tests/prohibitedUnionType.kt
fun test() {
    val x: <!UNSUPPORTED!>Int | Boolean<!> = 5
}
